Adding some more UI controls over electricity page

--- a/public/views/dashboard.hbs
+++ b/public/views/dashboard.hbs
@@ -5,6 +5,7 @@
     <meta charset="utf-8`">
      <title>HE | Dashboard</title>
      <link href="/css/vendor/bootstrap.min.css" rel='stylesheet' type='text/css' />
+     <link href="/css/vendor/bootstrap-select.min.css" rel='stylesheet' type='text/css' />
     <link href="/css/dashboard.css" rel='stylesheet' type='text/css' />
 </head>
 
@@ -54,8 +55,9 @@
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/lib/jquery.cookie.js"></script>
     <script src="/js/lib/handlebars.js"></script>
+    <script src="/js/lib/bootstrap-select.js"></script>  
     <script src="/js/app/dashboard/dashboard-service.js"></script>
-    <script src="/js/app/dashboard/dashboard.js"></script>      
+    <script src="/js/app/dashboard/dashboard.js"></script>              
     <script src={{serviceUrl}}></script>  
     <script src={{controllerUrl}}></script>  
 </body>
