Added dropwn in the gird."

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -105,3 +105,13 @@ body {
   display: inline-block;
   border-radius: 50%;
 }
+
+/*electricity page css*/
+.select-control{
+    display: inline-block;
+    width: auto;
+    /* border-radius: 2px; */
+    font-weight: bold;
+    color: #707070;
+}
+  
