--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -155,3 +155,17 @@ body {
     border: 1px solid rgba(0,0,0,.125);
     border-radius: .25em;
 }
+
+/**/
+.general-settings{
+    width:100px;
+    height:100px;
+    border:1px solid red;
+    margin-right:10px;
+    float:left;
+}
+
+.div-year{ 
+  display: inline;
+  margin-right:5px;
+}
